css/app.css
/*
BG   #221E1D #ECEAE0 #E9633B
TEXT #EDEBE1 #AEAB9D #63AA9C #221E1D
*/

html {
    overflow-y: scroll; /* To avoid scrollbar from disturbing the layout */
}

html,
body {
    padding: 0;
    margin: 0;
    background-color: #221E1D;
    font-family: "Segoe UI", Segoe, Tahoma, Geneva, sans-serif;
    font-size: 16px;
    color: #333;
    min-width: 320px;
}


@media (max-width: 319px) {
    body {
        width: 320px;
    }
}

/* Page Header */

#main_header {
    background-color: #E9633B;
    padding: 20px;
    min-height: 75px;
}

#main_header a {
    text-decoration: none;
    color: #221E1D;
    padding: 10px;
}

#main_header a[class$="logo"] {
    color: #EDEBE1;
}

#main_header > div div {
    display: inline-block;
    margin: 20px;
}

#main_header div.logo-container > a {
    font-size: 2.5em;
    line-height: 75px;
}

#wrapper {
    width: 100%;
    height: 100%;
    background-color: #ECEAE0;
}

#wrapper > section{
    padding: 20px;
}

#main_section {
    width: 65%;
    float: left;
    padding: 20px 5%;
    box-sizing: border-box;
}

#main_section .articles-container {
    width: 100%;
}

#main_section .article-item {
    width: 100%;
    height: 175px;
    padding: 25px;
    display: inline-block;
    position: relative;
    opacity: 1;
    cursor: pointer;
}

#main_section .article-item:hover {
    opacity: 0.8;
}

#main_section .article-item .figure-container {
    float: left;
    box-sizing: border-box;
    width: 40%;
    height: 100%;
}

#main_section .article-item figure {
    margin: 0;
    width: 100%;
    height: 100%;
}

#main_section .article-item figure > img {
    width: 100%;
    height: 100%;
    max-height: 100%;
}

#main_section .article-item .desc-container {
    float: left;
    box-sizing: border-box;
    width: 60%;
    height: 100%;
    padding: 0 20px;
    position: relative;
}

#main_section .article-item .desc-container .article-desc {
    height: 75%;
}

#main_section .article-item .desc-container .article-desc .article-title {
    font-size: 1em;
}

#main_section .article-item .desc-container .article-desc .article-summary {
    font-size: 0.9em;
    padding: 5px 0;
}

#main_section .article-item .desc-container .article-meta {
    bottom: 0;
    position: absolute;
    width: 90%;
    height: 25%;
    line-height: 36px;
}

#main_section .article-item .desc-container .article-meta .article-author-info {
    float: left;
}

#main_section .article-item .desc-container .article-meta .article-author-info .author-img {
    display: inline-block;
    vertical-align: middle;
    width: 36px;
    height: 36px;
    border-radius: 50%;
    border: 2px solid #AEAB9D;
    background-color: #ECEAE0;
    background-size: 100% 100%;
    box-sizing: border-box;
}

#main_section .article-item .desc-container .article-meta .article-author-info .author-name {
    color: #AEAB9D;
    font-size: 0.9em;
    text-decoration: none;
    text-transform: lowercase;
}

#main_section .article-item .desc-container .article-meta .article-categories {
    color: #63AA9C;
    font-size: 0.8em;
    float: right;
}

#main_section .article-item .article-link {
    position: absolute;
    top: 0;
    bottom: 25%;
    left: 0;
    right: 0;
    margin: auto;
}

.ruler {
    width: 100%;
    height: 1px;
    background: radial-gradient(circle farthest-corner at 45px 45px, #CACAC6, #928B8A 40%, #CACAC6);
    position: relative;
    top: 25px;
    float: left;
}

.top-ruler {
    position: relative;
    left: 25px; /*BUG: Width doesn't match with other rulers */
}

#upcoming_aside {
    float: right;
    width: 29%;
    border: 1px solid;
    box-sizing: border-box;
    background-color: #221E1D;
    color: #EDEBE1;
    margin: 3%;
    text-align: center;
}

#upcoming_aside > section {
    color: #317D6E;
    font-size: 0.9em;
}

/* Page footer*/

#main_footer {
    clear: both;
    min-height: 50px;
    width: 100%;
    text-align: center;
    background-color: #221E1D;
    color: #EDEBE1;
    padding: 20px;
    box-sizing: border-box;
    font-size: 0.9em;
}

#profiles {
    display: table;
    height: 32px;
    margin: 0 auto;
}

#profiles > span {
    height: 100%;
    display: table-cell;
    vertical-align: middle;
    padding: 0 2px;
}

.profile-link {
    text-decoration: none;
}

.profile-link .profile-icon {
    width: 32px;
    height: 32px;
}

